First commit to master

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "issinfo",
+  "homepage": "https://khoaHyh.github.io/issinfo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,9 +11,11 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-leaflet": "^2.7.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
